tests/A2/reject/voidParam.ul
void main(){

}


int foo(void x){
    return 2;
}